2002-10-30 Based on patch from Lukas Geyer

	* Cosmetic changes, e-mail addr. / Copyright etc

2002-10-21 Based on patch from Lukas Geyer

	* Fix buffer overflows in epd.c and pgn.c

	* Rewrite EPD parsing.

2002-09-07 Simon Waters <simon@wretched.demon.co.uk>

	* Add "book random" to command line help text

	* Remove redundant code, and update documentation for release.

2002-08-17 Simon Waters <simon@wretched.demon.co.uk>

	* Bug code bug introduced in development version
	  that breaks if no book is present in XBOARD
	  version.

2002-08-02 Simon Waters <simon@wretched.demon.co.uk>

	* Switch from short to int for all short
	  variable types.
	  (Note some aspects of change require futher work)

	* Correct SortRoot test for passed pawn moves.

2002-08-02 Simon Waters <simon@wretched.demon.co.uk>

	* Clean up of SortRoot (also MC suggested optimisation)

	* Tidy code to remove 99 lclint errors (274 to go)

2002-08-02 Based on patch from Lukas Geyer

	* Add list of possible book locations, to allow
	  central location for book on multiuser servers.
	   "book.dat"
	   "/usr/lib/games/gnuchess/book.dat"

	* Limit book to BOOKDEPTH ply not BOOKDEPTH moves.

	* Improve handling of excessive hashsize requests.

2002-08-01  Simon Waters <simon@wretched.demon.co.uk>

	* Correct additional input file name limits
	  and related field sizes throughout code.
	  (NB UNIVERSIAL code changes untested)

	* Changes proposed by MC for compiling with MSVC
	  Note: ULL() macro should be used for 64 bit integer constants

	* Change help text for "universal" if it wasn't compiled in.

	* Minor optimisation in the misnamed MateScan routine.

	* Shorten declaration of rings, this doesn't need to be in init.c

	* Clean up case statement for X-ray attacks.

	* Correct array bound error in cmd.c hint code.

	* Correct memset in book code.

	* Reorder test on trimming trailing spaces.

2002-05-19  Simon Waters <simon@wretched.demon.co.uk>
