@@ -1,3 +1,7 @@
+2002-10-30 Simon Waters <simon@wretched.demon.co.uk>
+
+	* Remove nominal support for UNIVERSAL board from code.
+
 2002-10-30 Based on patch from Lukas Geyer
 
 	* Cosmetic changes, e-mail addr. / Copyright etc
